# ros2pros

./: .gitignore  hello.txt
documents/: ReadMe
products/cpp/bags/rosbag2_2025_08_28-09_55_17/: metadata.yaml  rosbag2_2025_08_28-09_55_17_0.db3
products/cpp/fishbot_desc_ws/log/: latest_build
products/cpp/tf_pratice_ws/: frames_2025-08-27_17.44.07.gv
products/cpp/tf_pratice_ws/log/: latest_build
projects/demo_cpp_pkg/: CMakeLists.txt
projects/demo_cpp_pkg/src/: cpp_node.cpp
projects/demo_python_pkg/: setup.py
projects/install/: local_setup.sh  setup.sh
projects/log/: latest_build
test/cpp/bayes_workspace/install/: local_setup.sh  setup.sh
test/cpp/bayes_workspace/log/: latest_build
test/cpp/bayes_workspace/src/test_cpp_demo/: CMakeLists.txt
test/cpp/bayes_workspace/src/test_cpp_demo/include/test_cpp_demo/: PersonNode.h
test/cpp/bayes_workspace/src/test_cpp_demo/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/cpp/bayes_workspace/src/test_cpp_demo/install/test_cpp_demo/share/ament_index/resource_index/parent_prefix_path/: test_cpp_demo
test/cpp/bayes_workspace/src/test_cpp_demo/install/test_cpp_demo/share/test_cpp_demo/: package.bash  package.sh
test/cpp/bayes_workspace/src/test_cpp_demo/log/: latest_build
test/cpp/bayes_workspace/src/test_cpp_demo/src/: PersonNode.cpp  WriteNode.cpp  bayestest.cpp  mainPerson.cpp
test/python/: test1.py
test/python/workspace/: novel1.txt  novel2.txt  novel3.txt
test/python/workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test/python/workspace/log/: latest_build
test/python/workspace/src/: novel1.txt
(+130 files in other folders)
